--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,7 +161,7 @@
 
 
                 <article class="novel-item">
-                    <img src="/images/metam-español.jpeg" alt="">
+                    <img src="/images/metam-espanol.jpeg" alt="">
                     <h2>La metamorfosis</h2>
                     <p>Franz Kafka</p>
                     <p>Ilus.: Luis Scafati</p>
