--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
             </div>
             <nav class="main-menu">
                 <ul class="menu">
-                    <li class="menu__item"><a class="animation" href="">Inicio</a></li>
+                    <li class="menu__item"><a class="animation" href="/">Inicio</a></li>
                     <li class="menu__item"><a class="animation" href="">¿Quiénes somos?</a></li>
                     <li class="menu__item"><a class="animation" href="">Catálogo</a></li>
                     <li class="menu__item"><a href=""><i class="fa-regular fa-user"></i></a></li>
