--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                         <li class="menu__item"><a class="animation" href="">¿Quiénes somos?</a></li>
                         <li class="menu__item"><a class="animation" href="">Catálogo</a></li>
                         <li class="menu__item"><a href="/login"><i class="fa-regular fa-user"></i></a></li>
-                        <li class="menu__item"><a href=""><i class="fa-brands fa-searchengin"></i></a></li>
+                        <li class="menu__item"><a href=""><i class="fa fa-search"></i></a></li>
          
                     </ul>
                 </nav>
@@ -152,7 +152,7 @@
 
             <div class="novel-container">
                 <article class="novel-item">
-                    <img src="/images/condesa-sangrienta.jpeg" alt="">
+                    <img src="/images/home_condesa-sangrienta.jpg" alt="">
                     <h2>La condesa condesa sangrienta</h2>
                     <p>Alejandra Pizarnik</p>
                     <p>Ilus.: Santiago Caruso</p>
@@ -225,11 +225,11 @@
 
 
                 <article class="children-item">
-                    <img src="/images/hilo-sin-fin.jpeg" alt="">
-                    <h2>Hilo sin fin</h2>
-                    <p>Julio Cortázar</p>
-                    <p>Ilus.: Emilio Urberuaga</p>
-                    <p>$1300</p>
+                    <img src="/images/gotita.jpeg" alt="">
+                    <h2>Gotita</h2>
+                    <p>Stéphanie Joire</p>
+                    <p>Ilus.: Laura Fanelli</p>
+                    <p>$4200</p>
                 </article>
 
 
@@ -277,7 +277,7 @@
         <div class="more-genres">
             <p class="viajes"><a href="">> VIAJES</a></p>
             <p class="humor"><a href="">> HUMOR</a></p>
-            <p class="arte"><a href="">> BIOGRAFÍA</a></p>
+            <p class="biografia"><a href="">> BIOGRAFÍA</a></p>
             <!-- <p class="biografia"><a href="">> ARTE</a></p> -->
 
         </div>
