--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
                     <li class="menu__item"><a class="animation" href="">¿Quiénes somos?</a></li>
                     <li class="menu__item"><a class="animation" href="">Catálogo</a></li>
                     <li class="menu__item"><a href=""><i class="fa-regular fa-user"></i></a></li>
-                    <li class="menu__item"><a href=""><i class="fa-brands fa-searchengin"></i></a></li>
+                    <li class="menu__item"><a href=""><i class="fa fa-search"></i></a></li>
      
                 </ul>
             </nav>
