--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
                 <li class="menu__item"><a class="animation" href="">¿Quiénes somos?</a></li>
                 <li class="menu__item"><a class="animation" href="">Catálogo</a></li>
                 <li class="menu__item"><a href="/login"><i class="fa-regular fa-user"></i></a></li>
-                <li class="menu__item"><a href=""><i class="fa-brands fa-searchengin"></i></a></li>
+                <li class="menu__item"><a href=""><i class="fa fa-search"></i></a></li>
  
             </ul>
         </nav>
@@ -57,7 +57,7 @@
               <label for="domicilio"></label>
               <input type="text" name="domicilio" id="domicilio" placeholder="Domicilio" class="input-barras" required>
       
-            <label class="titulo-avatar" for="avatar">SELECCIONAR UNA IMAGEN DE PERFIL</label>
+            <label class="titulo-avatar" for="avatar">IMAGEN DE PERFIL</label>
             <input type="file" name="imagen" class="input-avatar">
         
             <label for="password"></label>
