--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,14 +75,14 @@
                     <img src="/images/Cover-Cielo-sobre-Berlin-WEB.jpeg" alt="">
                     <h2>El cielo sobre Berlín</h2>
                     <p>Sebastiano y Lorenzo Toma</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
                 <article class="novel-item">
                     <img src="/images/home_cover_piano.jpeg" alt="">
                     <h2>El piano oriental</h2>
                     <p>Zeina Abirached</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
 
@@ -90,7 +90,7 @@
                     <img src="/images/home_cover_persepolis.jpeg" alt="">
                     <h2>Persepolis</h2>
                     <p>Marjane Satrapi</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
 
@@ -99,14 +99,14 @@
                     <h2>El año de la rata</h2>
                     <p>Mariana Enríquez</p>
                     <p>Ilus.: Dr. Alderete</p>
-                    <p>$2200</p>
+                    <p class="precio">$2200</p>
                 </article>
 
                 <article class="novel-item">
                     <img src="/images/home_cover_heimat.jpeg" alt="">
                     <h2>Heimat</h2>
                     <p>Nora Krug</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
                 <article class="novel-item">
@@ -114,7 +114,7 @@
                     <h2>Un paseo por la vida de Simone de Beauvoir</h2>
                     <p> Carmen G. de la Cueva</p>
                     <p>Ilus: Malota</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
             </div>
         </section>
@@ -156,7 +156,7 @@
                     <h2>La condesa condesa sangrienta</h2>
                     <p>Alejandra Pizarnik</p>
                     <p>Ilus.: Santiago Caruso</p>
-                    <p>$2200</p>
+                    <p class="precio">$2200</p>
                 </article>
 
 
@@ -165,7 +165,7 @@
                     <h2>La metamorfosis</h2>
                     <p>Franz Kafka</p>
                     <p>Ilus.: Luis Scafati</p>
-                    <p>$2500</p>
+                    <p class="precio">$2500</p>
                 </article>
 
                 <article class="novel-item">
@@ -173,7 +173,7 @@
                     <h2>Romeo y Julieta</h2>
                     <p>William Shakespeare</p>
                     <p>Svetlin Vassilev</p>
-                    <p>$2200</p>
+                    <p class="precio">$2200</p>
                 </article>
 
 
@@ -182,7 +182,7 @@
                     <h2>El hombre invisible</h2>
                     <p>H. G. Wells</p>
                     <p>Ilus.: Luis Scafati</p>
-                    <p>$2200</p>
+                    <p class="precio">$2200</p>
                 </article>
 
 
@@ -191,7 +191,7 @@
                     <h2>Odas a la comida y otros placeres elementales</h2>
                     <p>Pablo Neruda</p>
                     <p>Ilus.: Javier Zabala</p>
-                    <p>$2500</p>
+                    <p class="precio">$2500</p>
                 </article>
 
 
@@ -200,7 +200,7 @@
                     <h2>Fahrenheit 451</h2>
                     <p>Ray Bradbury</p>
                     <p>Ilus.: Ralph Steadman</p>
-                    <p>$2600</p>
+                    <p class="precio">$2600</p>
                 </article>
             </div>
         </section>
@@ -220,7 +220,7 @@
                     <h2>Discurso del oso</h2>
                     <p>Julio Cortázar</p>
                     <p>Ilus.: Emilio Urberuaga</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
 
@@ -229,7 +229,7 @@
                     <h2>Gotita</h2>
                     <p>Stéphanie Joire</p>
                     <p>Ilus.: Laura Fanelli</p>
-                    <p>$4200</p>
+                    <p class="precio">$4200</p>
                 </article>
 
 
@@ -238,7 +238,7 @@
                     <h2>Espera, Miyuki</h2>
                     <p>Roxane Marie</p>
                     <p>Ilus.: Seng Soun Ratavanah</p>
-                    <p>$1200</p>
+                    <p class="precio">$1200</p>
                 </article>
 
 
@@ -247,7 +247,7 @@
                     <h2>Ríos del mundo</h2>
                     <p>Volker Mehnert</p>
                     <p>Ilus.: Martin Haake</p>
-                    <p>2200</p>
+                    <p class="precio">$2200</p>
                 </article>
 
 
@@ -255,7 +255,7 @@
                     <img src="/images/COVER_Serafina.jpeg" alt="">
                     <h2>Serafina</h2>
                     <p>Albertine</p>
-                    <p>$3200</p>
+                    <p class="precio">$3200</p>
                 </article>
 
                 <article class="children-item">
@@ -263,7 +263,7 @@
                     <h2>El vendedor de felicidad</h2>
                     <p>Davide Calì</p>
                     <p>Ilus.: Marco Somà</p>
-                    <p>$1600</p>
+                    <p class="precio">$1600</p>
                 </article>
             </div>
         </section>
